--- a/worldofwarcraft.html
+++ b/worldofwarcraft.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<HEAD>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World of Warcraft: Spiel des Jahres 2023</title>
-</HEAD>
-<BODY>
-<h1>World of Warcraft: Spiel des Jahres 2023</h1>
-<p>World of Warcraft hat sich im Jahr 2023 wieder an die Spitze der Gaming-Welt gesetzt und wurde zum Spiel des Jahres
-    gekürt. Mit beeindruckenden Updates, neuen Inhalten und einer engagierten Community bleibt WoW das ultimative
-    MMORPG-Erlebnis.</p>
-<h2>Gründe für den Erfolg von WoW im Jahr 2023</h2>
-<ul>
-    <li>Umfangreiche neue Erweiterungen und Inhalte
-    <li>Engagierte und hilfsbereite Community
-    <li>Optimierte Spielerfahrung und modernisierte Grafik
-</ul>
+</head>
+<body>
+<header>
+    <h1>World of Warcraft: Spiel des Jahres 2023</h1>
+</header>
+<main>
+    <p>World of Warcraft hat sich im Jahr 2023 wieder an die Spitze der Gaming-Welt gesetzt und wurde zum Spiel des
+        Jahres
+        gekürt. Mit beeindruckenden Updates, neuen Inhalten und einer engagierten Community bleibt WoW das ultimative
+        MMORPG-Erlebnis.</p>
+    <h2>Gründe für den Erfolg von WoW im Jahr 2023</h2>
+    <ul>
+        <li>Umfangreiche neue Erweiterungen und Inhalte
+        <li>Engagierte und hilfsbereite Community
+        <li>Optimierte Spielerfahrung und modernisierte Grafik
+    </ul>
+</main>
 <footer>
     <p>&copy; 2023 World of Warcraft. Alle Rechte vorbehalten.</P>
 </footer>
-</BODY>
+</body>
 </html>
